Fix a FlushLiveness problem. https://bugs.webkit.org/show_bug.cgi?id=122984

Patch by Nadav Rotem <nrotem@apple.com> on 2013-10-18
Reviewed by Filip Pizlo.

Source/JavaScriptCore:

* dfg/DFGFlushLivenessAnalysisPhase.cpp:
(JSC::DFG::FlushLivenessAnalysisPhase::process):

LayoutTests:

* js/regress/script-tests/stepanov_container.js: Added.
* js/regress/stepanov_container-expected.txt: Added.
* js/regress/stepanov_container.html: Added.

Canonical link: https://commits.webkit.org/141098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157637 268f45cc-cd09-0410-ab3c-d52691b4dbfc